--- a/people.html
+++ b/people.html
@@ -19,13 +19,12 @@
 <div class="menu-item"><a href="people.html" class="current">People</a></div>
 <div class="menu-item"><a href="projects.html">Research&nbsp;projects</a></div>
 <div class="menu-category">Software</div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/StructuredOptimization.jl">StructuredOptimization.jl</a></div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/ProximalOperators.jl">ProximalOperators.jl</a></div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/ProximalAlgorithms.jl">ProximalAlgorithms.jl</a></div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/nmpc-codegen">nmpc-codegen</a></div>
-<div class="menu-item"><a href="https://kul-forbes.github.io/ForBES/">ForBES</a></div>
-<div class="menu-item"><a href="https://kul-forbes.github.io/scs/">SuperSCS</a></div>
-<div class="menu-item"><a href="https://github.com/Benny44/QPALM">QPALM</a></div>
+<div class="menu-item"><a href="https://github.com/JuliaFirstOrder/StructuredOptimization.jl">StructuredOptimization.jl</a></div>
+<div class="menu-item"><a href="https://github.com/JuliaFirstOrder/ProximalOperators.jl">ProximalOperators.jl</a></div>
+<div class="menu-item"><a href="https://github.com/JuliaFirstOrder/ProximalAlgorithms.jl">ProximalAlgorithms.jl</a></div>
+<div class="menu-item"><a href="https://alphaville.github.io/optimization-engine/">OpEn</a></div>
+<div class="menu-item"><a href="https://github.com/kul-optec/superscs">SuperSCS</a></div>
+<div class="menu-item"><a href="https://github.com/Benny44/QPALM_vLADEL">QPALM</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -33,31 +32,29 @@
 <div id="subtitle"><a href="https://www.esat.kuleuven.be/english/overview">Department of Electrical Engineering (ESAT)</a>, <a href="https://www.kuleuven.be/english/">KU Leuven</a></div>
 </div>
 <h3>Current Postdocs</h3>
-<p><a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a><br />
-<a href="https://scholar.google.com/citations?user=hjMg7-IAAAAJ&amp;hl=en">Miguel  Simoes</a><br /></p>
+<p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=762">Puya Latafat</a><br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2431">Emanuel Laude</a><br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2381">Miguel Simoes</a><br /></p>
 <h3>Current PhD students</h3>
 <p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2420">Jean-Pierre Allamaa</a><br />
 <a href="https://www.esat.kuleuven.be/stadius/person.php?id=2308">Pourya Behmandpoor</a> (co-advised with <a href="https://www.esat.kuleuven.be/stadius/person.php?id=2">Marc Moonen</a>)<br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00104969">Peter Coppens</a> (co-advised with <a href="https://www.mech.kuleuven.be/en/pma/research/meco/people/00015548">Jan Swevers</a>)<br />
-<a href="https://homes.esat.kuleuven.be/~sistawww/it/stadius_redesign/person.php?id=2370">Brecht Evens</a><br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00104126">Ben Hermans</a> (co-advised with <a href="https://www.mech.kuleuven.be/en/pma/research/meco/people/00041257">Goele Pipeleers</a>)<br />
-<a href="https://homes.esat.kuleuven.be/~sistawww/it/stadius_redesign/person.php?id=2369">Robin Kenis</a> (co-advised with <a href="https://homes.esat.kuleuven.be/~sistawww/it/stadius_redesign/person.php?id=22">Lieven De Lathauwer</a>)<br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00142315">Teodor Rotaru</a> (co-advised with <a href="https://perso.uclouvain.be/francois.glineur/">Francois Glineur</a>)<br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00110604">Mathijs Schuurmans</a><br />
-<a href="https://www.kuleuven.be/wieiswie/en/person/00131918">Francesco Tonin</a> (co-advised with <a href="https://www.esat.kuleuven.be/sista/members/suykens.html">Johan Suykens</a>)<br /></p>
-<h3>Current master students</h3>
-<p>Matteo Janssen<br />
-Kemal Mahmuljin<br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2069">Peter Coppens</a> (co-advised with <a href="https://www.mech.kuleuven.be/en/pma/research/meco/people/00015548">Jan Swevers</a>)<br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2370">Brecht Evens</a><br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2369">Robin Kenis</a> (co-advised with <a href="https://homes.esat.kuleuven.be/~sistawww/it/stadius_redesign/person.php?id=22">Lieven De Lathauwer</a>)<br />
 Pieter Pas<br />
-Jan Scheers<br /></p>
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2378">Teodor Rotaru</a> (co-advised with <a href="https://perso.uclouvain.be/francois.glineur/">Francois Glineur</a>)<br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2243">Mathijs Schuurmans</a><br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2312">Francesco Tonin</a> (co-advised with <a href="https://www.esat.kuleuven.be/sista/members/suykens.html">Johan Suykens</a>)<br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2421">Renzi Wang</a><br /></p>
 <h3>Former Postdocs</h3>
 <p><a href="https://www.uantwerpen.be/en/staff/masoud-ahookhosh_22162/">Masoud Ahookhosh</a>, Assistant Professor, University of Antwerp<br />
 <a href="https://alphaville.github.io">Pantelis Sopasakis</a>, Lecturer,  Queen's University Belfast<br /></p>
 <h3>Former PhD students</h3>
-<p><a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a><br />
-<a href="https://scholar.google.com/citations?user=DgXgGn0AAAAJ&amp;hl=it">Andreas Themelis</a>, Associate Professor, Kyushu University<br />
-<a href="https://lostella.github.io">Lorenzo Stella</a>, Amazon<br />
-<a href="https://www.linkedin.com/in/albertoguiggiani">Alberto Guiggiani</a>, Controls Design Engineer, Apple<br /></p>
+<p>Ben Hermans, <a href="https://lirias.kuleuven.be/retrieve/623202">Penalty and Augmented Lagrangian Methods for Model Predictive Control</a><br /> 
+<a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a>, <a href="https://lirias.kuleuven.be/retrieve/580549">Distributed Proximal Algorithms for Large-Scale Structured Optimization</a><br />
+<a href="https://scholar.google.com/citations?user=DgXgGn0AAAAJ&amp;hl=it">Andreas Themelis</a>, <a href="https://lirias.kuleuven.be/retrieve/524341">Proximal Algorithms for Structured Nonconvex Optimization</a>, Associate Professor, Kyushu University<br />
+<a href="https://lostella.github.io">Lorenzo Stella</a>, <a href="https://limo.libis.be/primo-explore/fulldisplay?docid=LIRIAS1693150&amp;context=L&amp;vid=Lirias&amp;search_scope=Lirias&amp;tab=default_tab&amp;lang=en_US&amp;fromSitemap=1">Proximal Envelopes: Smooth Optimization Algorithms for Nonsmooth Problems</a>, Amazon<br />
+<a href="https://www.linkedin.com/in/albertoguiggiani">Alberto Guiggiani</a>, <a href="http://e-theses.imtlucca.it/168/1/thesis_GUIGGIANI.pdf">Embedded model predictive control: finite precision arithmetic and aerospace applications</a>, Senior Controls Engineer, Apple<br /></p>
 </td>
 </tr>
 </table>
