--- a/publications.html
+++ b/publications.html
@@ -19,13 +19,12 @@
 <div class="menu-item"><a href="people.html">People</a></div>
 <div class="menu-item"><a href="projects.html">Research&nbsp;projects</a></div>
 <div class="menu-category">Software</div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/StructuredOptimization.jl">StructuredOptimization.jl</a></div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/ProximalOperators.jl">ProximalOperators.jl</a></div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/ProximalAlgorithms.jl">ProximalAlgorithms.jl</a></div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/nmpc-codegen">nmpc-codegen</a></div>
-<div class="menu-item"><a href="https://kul-forbes.github.io/ForBES/">ForBES</a></div>
-<div class="menu-item"><a href="https://kul-forbes.github.io/scs/">SuperSCS</a></div>
-<div class="menu-item"><a href="https://github.com/Benny44/QPALM">QPALM</a></div>
+<div class="menu-item"><a href="https://github.com/JuliaFirstOrder/StructuredOptimization.jl">StructuredOptimization.jl</a></div>
+<div class="menu-item"><a href="https://github.com/JuliaFirstOrder/ProximalOperators.jl">ProximalOperators.jl</a></div>
+<div class="menu-item"><a href="https://github.com/JuliaFirstOrder/ProximalAlgorithms.jl">ProximalAlgorithms.jl</a></div>
+<div class="menu-item"><a href="https://alphaville.github.io/optimization-engine/">OpEn</a></div>
+<div class="menu-item"><a href="https://github.com/kul-optec/superscs">SuperSCS</a></div>
+<div class="menu-item"><a href="https://github.com/Benny44/QPALM_vLADEL">QPALM</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -34,6 +33,14 @@
 </div>
 <h3>2021</h3>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2107.04395">Block Alternating Bregman Majorization Minimization with Extrapolation</a><br />
+SIAM Journal Journal on Mathematics of Data Science<br />
+L.T.K. Hien, D.N. Phan, N. Gillis, M. Ahookhosh, P. Patrinos</p>
+</li>
+<li><p><a href="https://arxiv.org/pdf/2011.12659.pdf">Unsupervised learning of disentangled representations in deep restricted kernel machines with orthogonality constraints</a><br />
+Neural Networks<br />
+F. Tonin, P. Patrinos, J.A.K. Suykens</p>
+</li>
 <li><p><a href="https://arxiv.org/abs/2103.03006">Data-driven distributionally robust MPC for constrained stochastic systems</a><br />
 IEEE Control Systems Letters<br />
 P. Coppens, P. Patrinos</p>
@@ -65,12 +72,15 @@ P. Latafat, A. Themelis, M. Ahookhosh, P. Patrinos </p>
 M. Schuurmans, P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2105.02511">Data-driven distributionally robust control of partially observable jump linear systems</a><br />
+60th IEEE Conference on Decision and Control (CDC), 2021<br />
 M. Schuurmans, P. Patrinos	</p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2103.14343">Neural network training as an optimal control problem: An augmented Lagrangian approach</a><br />
+60th IEEE Conference on Decision and Control (CDC), 2021<br />
 B. Evens, P. Latafat, A. Themelis, J. Suykens, P. Patrinos </p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2103.08533">Lasry-Lions envelopes and nonconvex optimization: A homotopy approach</a><br />
+29th European Signal Processing Conference (EUSIPCO), 2021<br />
 M. Simoes, A. Themelis, P. Patrinos</p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2102.08443">Unsupervised energy-based out-of-distribution detection using Stiefel-restricted kernel machine</a><br />
@@ -80,9 +90,6 @@ F. Tonin, A. Pandey, P. Patrinos, J. Suykens</p>
 </ul>
 <h3>2020</h3>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2011.12659.pdf">Unsupervised learning of disentangled representations in deep restricted kernel machines with orthogonality constraints</a><br />
-F. Tonin, P. Patrinos, J.A.K. Suykens</p>
-</li>
 <li><p><a href="https://arxiv.org/pdf/2010.02653.pdf">QPALM: A Proximal Augmented Lagrangian Method for Nonconvex Quadratic Programs</a><br /> 
 B. Hermans, A. Themelis, P. Patrinos</p>
 </li>
