--- a/teaching.html
+++ b/teaching.html
@@ -19,13 +19,12 @@
 <div class="menu-item"><a href="people.html">People</a></div>
 <div class="menu-item"><a href="projects.html">Research&nbsp;projects</a></div>
 <div class="menu-category">Software</div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/StructuredOptimization.jl">StructuredOptimization.jl</a></div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/ProximalOperators.jl">ProximalOperators.jl</a></div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/ProximalAlgorithms.jl">ProximalAlgorithms.jl</a></div>
-<div class="menu-item"><a href="https://github.com/kul-forbes/nmpc-codegen">nmpc-codegen</a></div>
-<div class="menu-item"><a href="https://kul-forbes.github.io/ForBES/">ForBES</a></div>
-<div class="menu-item"><a href="https://kul-forbes.github.io/scs/">SuperSCS</a></div>
-<div class="menu-item"><a href="https://github.com/Benny44/QPALM">QPALM</a></div>
+<div class="menu-item"><a href="https://github.com/JuliaFirstOrder/StructuredOptimization.jl">StructuredOptimization.jl</a></div>
+<div class="menu-item"><a href="https://github.com/JuliaFirstOrder/ProximalOperators.jl">ProximalOperators.jl</a></div>
+<div class="menu-item"><a href="https://github.com/JuliaFirstOrder/ProximalAlgorithms.jl">ProximalAlgorithms.jl</a></div>
+<div class="menu-item"><a href="https://alphaville.github.io/optimization-engine/">OpEn</a></div>
+<div class="menu-item"><a href="https://github.com/kul-optec/superscs">SuperSCS</a></div>
+<div class="menu-item"><a href="https://github.com/Benny44/QPALM_vLADEL">QPALM</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
