--- a/publications.html
+++ b/publications.html
@@ -33,6 +33,12 @@
 </div>
 <h3>2021</h3>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2112.08886">Conjugate dualities for relative smoothness and strong convexity under the light of generalized convexity</a><br />
+E. Laude, A. Themelis, P. Patrinos</p>
+</li>
+<li><p><a href="https://arxiv.org/abs/2112.02370">Alpaqa: A matrix-free solver for nonlinear MPC and large-scale nonconvex optimization</a><br />
+P. Pas, M. Schuurmans, P. Patrinos</p>
+</li>
 <li><p><a href="https://arxiv.org/abs/2107.04395">Block Alternating Bregman Majorization Minimization with Extrapolation</a><br />
 SIAM Journal Journal on Mathematics of Data Science<br />
 L.T.K. Hien, D.N. Phan, N. Gillis, M. Ahookhosh, P. Patrinos</p>
