--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 10th International Conference on Learning Representations (ICLR 2022), <b>spotlight</b></p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2107.04395">Block Alternating Bregman Majorization Minimization with Extrapolation</a><br />
-SIAM Journal Journal on Mathematics of Data Science, vol. 4, no. 1, pp. 1-25<br />
+SIAM Journal on Mathematics of Data Science, vol. 4, no. 1, pp. 1-25<br />
 L.T.K. Hien, D.N. Phan, N. Gillis, M. Ahookhosh, P. Patrinos </p>
 </li>
 </ul>
