--- a/people.html
+++ b/people.html
@@ -6,6 +6,17 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Panos Patrinos &ndash; People</title>
+<!-- MathJax -->
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script>
+    window.MathJax = {
+        tex: {
+            tags: 'ams'
+        }
+    };
+</script>
+<!-- End MathJax -->
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -29,34 +40,38 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Panos Patrinos &ndash; People</h1>
-<div id="subtitle"><a href="https://www.esat.kuleuven.be/english/overview">Department of Electrical Engineering (ESAT)</a>, <a href="https://www.kuleuven.be/english/">KU Leuven</a></div>
+<div id="subtitle"><a href="https://www.esat.kuleuven.be/english/overview" target=&ldquo;blank&rdquo;>Department of Electrical Engineering (ESAT)</a>, <a href="https://www.kuleuven.be/english/" target=&ldquo;blank&rdquo;>KU Leuven</a>
+</div>
 </div>
 <h3>Current Postdocs</h3>
-<p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=762">Puya Latafat</a><br />
-<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2431">Emanuel Laude</a><br />
-<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2381">Miguel Simoes</a><br /></p>
+<p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=762" target=&ldquo;blank&rdquo;>Puya Latafat</a><br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2431" target=&ldquo;blank&rdquo;>Emanuel Laude</a><br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2381" target=&ldquo;blank&rdquo;>Miguel Simoes</a><br />
+</p>
 <h3>Current PhD students</h3>
-<p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2420">Jean-Pierre Allamaa</a><br />
-<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2308">Pourya Behmandpoor</a> (co-advised with <a href="https://www.esat.kuleuven.be/stadius/person.php?id=2">Marc Moonen</a>)<br />
-<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2069">Peter Coppens</a> (co-advised with <a href="https://www.mech.kuleuven.be/en/pma/research/meco/people/00015548">Jan Swevers</a>)<br />
-<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2370">Brecht Evens</a><br />
-<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2369">Robin Kenis</a> (co-advised with <a href="https://homes.esat.kuleuven.be/~sistawww/it/stadius_redesign/person.php?id=22">Lieven De Lathauwer</a>)<br />
+<p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2420" target=&ldquo;blank&rdquo;>Jean-Pierre Allamaa</a><br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2308" target=&ldquo;blank&rdquo;>Pourya Behmandpoor</a> (co-advised with <a href="https://www.esat.kuleuven.be/stadius/person.php?id=2" target=&ldquo;blank&rdquo;>Marc Moonen</a>)<br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2069" target=&ldquo;blank&rdquo;>Peter Coppens</a> (co-advised with <a href="https://www.mech.kuleuven.be/en/pma/research/meco/people/00015548" target=&ldquo;blank&rdquo;>Jan Swevers</a>)<br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2370" target=&ldquo;blank&rdquo;>Brecht Evens</a><br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2369" target=&ldquo;blank&rdquo;>Robin Kenis</a> (co-advised with <a href="https://homes.esat.kuleuven.be/~sistawww/it/stadius_redesign/person.php?id=22" target=&ldquo;blank&rdquo;>Lieven De Lathauwer</a>)<br />
 Pieter Pas<br />
-<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2378">Teodor Rotaru</a> (co-advised with <a href="https://perso.uclouvain.be/francois.glineur/">Francois Glineur</a>)<br />
-<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2243">Mathijs Schuurmans</a><br />
-<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2312">Francesco Tonin</a> (co-advised with <a href="https://www.esat.kuleuven.be/sista/members/suykens.html">Johan Suykens</a>)<br />
-<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2421">Renzi Wang</a><br /></p>
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2378" target=&ldquo;blank&rdquo;>Teodor Rotaru</a> (co-advised with <a href="https://perso.uclouvain.be/francois.glineur/" target=&ldquo;blank&rdquo;>Francois Glineur</a>)<br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2243" target=&ldquo;blank&rdquo;>Mathijs Schuurmans</a><br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2312" target=&ldquo;blank&rdquo;>Francesco Tonin</a> (co-advised with <a href="https://www.esat.kuleuven.be/sista/members/suykens.html" target=&ldquo;blank&rdquo;>Johan Suykens</a>)<br />
+<a href="https://www.esat.kuleuven.be/stadius/person.php?id=2421" target=&ldquo;blank&rdquo;>Renzi Wang</a><br />
+</p>
 <h3>Former Postdocs</h3>
-<p><a href="https://www.uantwerpen.be/en/staff/masoud-ahookhosh_22162/">Masoud Ahookhosh</a>, Assistant Professor, University of Antwerp<br />
-<a href="https://alphaville.github.io">Pantelis Sopasakis</a>, Lecturer,  Queen's University Belfast<br /></p>
+<p><a href="https://www.uantwerpen.be/en/staff/masoud-ahookhosh_22162/" target=&ldquo;blank&rdquo;>Masoud Ahookhosh</a>, Assistant Professor, University of Antwerp<br />
+<a href="https://alphaville.github.io" target=&ldquo;blank&rdquo;>Pantelis Sopasakis</a>, Lecturer,  Queen's University Belfast<br />
+</p>
 <h3>Former PhD students</h3>
-<p>Ben Hermans, <a href="https://lirias.kuleuven.be/retrieve/623202">Penalty and Augmented Lagrangian Methods for Model Predictive Control</a><br /> 
-<a href="https://www.kuleuven.be/wieiswie/en/person/00113202">Puya Latafat</a>, <a href="https://lirias.kuleuven.be/retrieve/580549">Distributed Proximal Algorithms for Large-Scale Structured Optimization</a><br />
-<a href="https://scholar.google.com/citations?user=DgXgGn0AAAAJ&amp;hl=it">Andreas Themelis</a>, <a href="https://lirias.kuleuven.be/retrieve/524341">Proximal Algorithms for Structured Nonconvex Optimization</a>, Associate Professor, Kyushu University<br />
-<a href="https://lostella.github.io">Lorenzo Stella</a>, <a href="https://limo.libis.be/primo-explore/fulldisplay?docid=LIRIAS1693150&amp;context=L&amp;vid=Lirias&amp;search_scope=Lirias&amp;tab=default_tab&amp;lang=en_US&amp;fromSitemap=1">Proximal Envelopes: Smooth Optimization Algorithms for Nonsmooth Problems</a>, Amazon<br />
-<a href="https://www.linkedin.com/in/albertoguiggiani">Alberto Guiggiani</a>, <a href="http://e-theses.imtlucca.it/168/1/thesis_GUIGGIANI.pdf">Embedded model predictive control: finite precision arithmetic and aerospace applications</a>, Senior Controls Engineer, Apple<br /></p>
+<p>Ben Hermans, <a href="https://lirias.kuleuven.be/retrieve/623202" target=&ldquo;blank&rdquo;>Penalty and Augmented Lagrangian Methods for Model Predictive Control</a><br /> 
+<a href="https://www.kuleuven.be/wieiswie/en/person/00113202" target=&ldquo;blank&rdquo;>Puya Latafat</a>, <a href="https://lirias.kuleuven.be/retrieve/580549" target=&ldquo;blank&rdquo;>Distributed Proximal Algorithms for Large-Scale Structured Optimization</a><br />
+<a href="https://scholar.google.com/citations?user=DgXgGn0AAAAJ&amp;hl=it" target=&ldquo;blank&rdquo;>Andreas Themelis</a>, <a href="https://lirias.kuleuven.be/retrieve/524341" target=&ldquo;blank&rdquo;>Proximal Algorithms for Structured Nonconvex Optimization</a>, Associate Professor, Kyushu University<br />
+<a href="https://lostella.github.io" target=&ldquo;blank&rdquo;>Lorenzo Stella</a>, <a href="https://limo.libis.be/primo-explore/fulldisplay?docid=LIRIAS1693150&amp;context=L&amp;vid=Lirias&amp;search_scope=Lirias&amp;tab=default_tab&amp;lang=en_US&amp;fromSitemap=1" target=&ldquo;blank&rdquo;>Proximal Envelopes: Smooth Optimization Algorithms for Nonsmooth Problems</a>, Amazon<br />
+<a href="https://www.linkedin.com/in/albertoguiggiani" target=&ldquo;blank&rdquo;>Alberto Guiggiani</a>, <a href="http://e-theses.imtlucca.it/168/1/thesis_GUIGGIANI.pdf" target=&ldquo;blank&rdquo;>Embedded model predictive control: finite precision arithmetic and aerospace applications</a>, Senior Controls Engineer, Apple<br />
+</p>
 </td>
 </tr>
 </table>
 </body>
-</html>
