--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,17 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Panos Patrinos &ndash; Research Projects</title>
+<!-- MathJax -->
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script>
+    window.MathJax = {
+        tex: {
+            tags: 'ams'
+        }
+    };
+</script>
+<!-- End MathJax -->
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -29,21 +40,28 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Panos Patrinos &ndash; Research Projects</h1>
-<div id="subtitle"><a href="https://www.esat.kuleuven.be/english/overview">Department of Electrical Engineering (ESAT)</a>, <a href="https://www.kuleuven.be/english/">KU Leuven</a></div>
+<div id="subtitle"><a href="https://www.esat.kuleuven.be/english/overview" target=&ldquo;blank&rdquo;>Department of Electrical Engineering (ESAT)</a>, <a href="https://www.kuleuven.be/english/" target=&ldquo;blank&rdquo;>KU Leuven</a>
+</div>
 </div>
 <ul>
-<li><p><a href="https://www.esat.kuleuven.be/stadius/project.php?id=1207">Optimization frameworks for deep kernel machines</a></p>
+<li><p><a href="https://www.esat.kuleuven.be/stadius/project.php?id=1207" target=&ldquo;blank&rdquo;>Optimization frameworks for deep kernel machines</a>
+</p>
 </li>
-<li><p><a href="https://www.esat.kuleuven.be/stadius/project.php?id=1244">Risk-averse Control and Dynamic Optimization Bridging the Gap Between Robust and Stochastic Control</a></p>
+<li><p><a href="https://www.esat.kuleuven.be/stadius/project.php?id=1244" target=&ldquo;blank&rdquo;>Risk-averse Control and Dynamic Optimization Bridging the Gap Between Robust and Stochastic Control</a>
+</p>
 </li>
-<li><p><a href="http://www.esat.kuleuven.be/stadius/project.php?id=1175">A unifying algorithmic framework for structured optimization</a></p>
+<li><p><a href="http://www.esat.kuleuven.be/stadius/project.php?id=1175" target=&ldquo;blank&rdquo;>A unifying algorithmic framework for structured optimization</a>
+</p>
 </li>
-<li><p><a href="http://www.esat.kuleuven.be/stadius/project.php?id=1173">SeLMA - Structured Low-Rank Matrix/Tensor Approximation: Numerical Optimization-Based Algorithms and Applications</a></p>
+<li><p><a href="http://www.esat.kuleuven.be/stadius/project.php?id=1173" target=&ldquo;blank&rdquo;>SeLMA - Structured Low-Rank Matrix/Tensor Approximation: Numerical Optimization-Based Algorithms and Applications</a>
+</p>
 </li>
-<li><p><a href="http://www.esat.kuleuven.be/stadius/project.php?id=1176">Risk-averse Control and Dynamic Optimization Bridging the Gap Between Robust and Stochastic Control</a></p>
+<li><p><a href="http://www.esat.kuleuven.be/stadius/project.php?id=1176" target=&ldquo;blank&rdquo;>Risk-averse Control and Dynamic Optimization Bridging the Gap Between Robust and Stochastic Control</a>
+</p>
 </li>
 </ul>
-<p><a href="research.html">Find out more</a>.</p>
+<p><a href="research.html" target=&ldquo;blank&rdquo;>Find out more</a>.
+</p>
 <table class="imgtable"><tr><td>
 <a href="http://www.fwo.be/en/"><img src="https://ppw.kuleuven.be/ogp/images/fwo-logo.png" alt="alt text" width="300px" height="100px" /></a>&nbsp;</td>
 <td align="left"></td></tr></table>
@@ -51,4 +69,3 @@
 </tr>
 </table>
 </body>
-</html>
