--- a/teaching.html
+++ b/teaching.html
@@ -6,6 +6,17 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Panos Patrinos &ndash; Teaching</title>
+<!-- MathJax -->
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script>
+    window.MathJax = {
+        tex: {
+            tags: 'ams'
+        }
+    };
+</script>
+<!-- End MathJax -->
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -29,13 +40,14 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Panos Patrinos &ndash; Teaching</h1>
-<div id="subtitle"><a href="https://www.esat.kuleuven.be/english/overview">Department of Electrical Engineering (ESAT)</a>, <a href="https://www.kuleuven.be/english/">KU Leuven</a></div>
+<div id="subtitle"><a href="https://www.esat.kuleuven.be/english/overview" target=&ldquo;blank&rdquo;>Department of Electrical Engineering (ESAT)</a>, <a href="https://www.kuleuven.be/english/" target=&ldquo;blank&rdquo;>KU Leuven</a>
 </div>
-<p><a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/H0E76AE.htm">Model Predictive Control</a><br />
-<a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/H03E3AE.htm">Optimization</a><br />
-<a href="https://onderwijsaanbod.kuleuven.be/syllabi/n/H01Q6CN.htm">P&amp;O: Electrical Engineering</a><br /></p>
+</div>
+<p><a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/H0E76AE.htm" target=&ldquo;blank&rdquo;>Model Predictive Control</a><br />
+<a href="https://onderwijsaanbod.kuleuven.be/syllabi/e/H03E3AE.htm" target=&ldquo;blank&rdquo;>Optimization</a><br />
+<a href="https://onderwijsaanbod.kuleuven.be/syllabi/n/H01Q6CN.htm" target=&ldquo;blank&rdquo;>P&amp;O: Electrical Engineering</a><br />
+</p>
 </td>
 </tr>
 </table>
 </body>
-</html>
