--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Panagiotis (Panos) Patrinos</title>
+<!-- MathJax -->
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+<script>
+    window.MathJax = {
+        tex: {
+            tags: 'ams'
+        }
+    };
+</script>
+<!-- End MathJax -->
 </head>
 <body>
 <script type="text/javascript">
@@ -44,22 +55,24 @@ try {
 <td align="left"><p><b>Panos Patrinos</b><br />
 Associate Professor,<br />
 Optimization, Systems and Control<br /><br />
-<a href="https://www.kuleuven.be/english/">KU Leuven</a><br />
-<a href="https://www.esat.kuleuven.be/english/overview">Dept. Electrical Engineering (ESAT)</a><br />
-<a href="https://www.esat.kuleuven.be/stadius/">STADIUS Center for Dynamical Systems,<br /> 
+<a href="https://www.kuleuven.be/english/" target=&ldquo;blank&rdquo;>KU Leuven</a><br />
+<a href="https://www.esat.kuleuven.be/english/overview" target=&ldquo;blank&rdquo;>Dept. Electrical Engineering (ESAT)</a><br />
+<a href="https://www.esat.kuleuven.be/stadius/" target=&ldquo;blank&rdquo;>STADIUS Center for Dynamical Systems,<br /> 
 Signal Processing and Data Analytics</a><br /> 
 Kasteelpark Arenberg 10, bus 2446,<br />
 B-3001 Leuven, Belgium<br />
 Office B00.15<br />
 Tel: +32 16374445<br />
-Email: panos.patrinos@esat.kuleuven.be</p>
+Email: panos.patrinos@esat.kuleuven.be
+</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>Panagiotis (Panos) Patrinos is associate professor at the <a href="https://www.esat.kuleuven.be/english">Department of Electrical Engineering (ESAT)</a> of <a href="https://kuleuven.be/">KU Leuven</a>, Belgium. In 2014 he was a visiting professor at  <a href="https://ee.stanford.edu">Stanford</a>. He received his PhD in Control and Optimization, M.S. in Applied Mathematics and M.Eng. from the <a href="https://www.ntua.gr/en/">National Technical University of Athens</a> in 2010, 2005 and 2003, respectively. After his PhD he held postdoc positions at the University of Trento and IMT Lucca, Italy, where he became an assistant professor in 2012. His current research interests are in the theory and algorithms of structured convex and nonconvex optimization and predictive control with a focus on large-scale, distributed, stochastic and embedded optimization and a wide range of application areas including automotive, aerospace, machine learning, signal processing and energy. </p>
+<p>Panagiotis (Panos) Patrinos is associate professor at the <a href="https://www.esat.kuleuven.be/english" target=&ldquo;blank&rdquo;>Department of Electrical Engineering (ESAT)</a> of <a href="https://kuleuven.be/" target=&ldquo;blank&rdquo;>KU Leuven</a>, Belgium. In 2014 he was a visiting professor at  <a href="https://ee.stanford.edu" target=&ldquo;blank&rdquo;>Stanford</a>. He received his PhD in Control and Optimization, M.S. in Applied Mathematics and M.Eng. from the <a href="https://www.ntua.gr/en/" target=&ldquo;blank&rdquo;>National Technical University of Athens</a> in 2010, 2005 and 2003, respectively. After his PhD he held postdoc positions at the University of Trento and IMT Lucca, Italy, where he became an assistant professor in 2012. His current research interests are in the theory and algorithms of structured convex and nonconvex optimization and predictive control with a focus on large-scale, distributed, stochastic and embedded optimization and a wide range of application areas including automotive, aerospace, machine learning, signal processing and energy. 
+</p>
 <h2>Open positions</h2>
-<p>I am currently looking for one postdoc and one-two PhD students. Please contact me by email to learn more.</p>
+<p>I am currently looking for one postdoc and one-two PhD students. Please contact me by email to learn more.
+</p>
 </td>
 </tr>
 </table>
 </body>
-</html>
