--- a/people.html
+++ b/people.html
@@ -50,9 +50,6 @@
 <li><p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2431" target=&ldquo;blank&rdquo;>Emanuel Laude</a><br />
 </p>
 </li>
-<li><p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2381" target=&ldquo;blank&rdquo;>Miguel Simoes</a><br />
-</p>
-</li>
 </ul>
 <h3>Current PhD students</h3>
 <ul>
@@ -75,6 +72,9 @@
 </p>
 </li>
 <li><p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2369" target=&ldquo;blank&rdquo;>Robin Kenis</a><br />
+</p>
+</li>
+<li><p><a href="https://www.kuleuven.be/wieiswie/nl/person/00157984" target=&ldquo;blank&rdquo;>Konstantinos Oikonomidis</a><br />
 </p>
 </li>
 <li><p><a href="https://github.com/tttapa" target=&ldquo;blank&rdquo;>Pieter Pas</a><br />
@@ -101,6 +101,9 @@
 </ul>
 <h3>Former Postdocs</h3>
 <ul>
+<li><p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2381" target=&ldquo;blank&rdquo;>Miguel Simoes</a><br />
+</p>
+</li>
 <li><p><a href="https://www.uantwerpen.be/en/staff/masoud-ahookhosh_22162/" target=&ldquo;blank&rdquo;>Masoud Ahookhosh</a>, Assistant Professor, University of Antwerp<br />
 </p>
 </li>
