--- a/people.html
+++ b/people.html
@@ -59,7 +59,7 @@
 <li><p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2308" target=&ldquo;blank&rdquo;>Pourya Behmandpoor</a><br />
 </p>
 </li>
-<li><p>Alexander Bodard<br />
+<li><p><a href="https://www.kuleuven.be/wieiswie/en/person/00140817" target=&ldquo;blank&rdquo;>Alexander Bodard</a><br />
 </p>
 </li>
 <li><p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2069" target=&ldquo;blank&rdquo;>Peter Coppens</a><br />
@@ -68,7 +68,7 @@
 <li><p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2370" target=&ldquo;blank&rdquo;>Brecht Evens</a><br />
 </p>
 </li>
-<li><p>Leander Hemelhof<br />
+<li><p><a href="https://www.kuleuven.be/wieiswie/en/person/00158232" target=&ldquo;blank&rdquo;>Leander Hemelhof</a><br />
 </p>
 </li>
 <li><p><a href="https://www.esat.kuleuven.be/stadius/person.php?id=2369" target=&ldquo;blank&rdquo;>Robin Kenis</a><br />
